src/test/deca/context/valid/created/demo.deca
// Description :
//    test de demonstration
//
// Resultats :
//		

class A {

	protected int x;
	int getX(){
		return x;
	}
}
	
{

A a;
a.getX();

}